feat: update based on standard criteria

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header with Navigation -->
-  <header>
+  <a href="#main-content" class="skip-link">Skip to Content</a>
+  
+  <header role="banner">
     <div class="container">
-      <nav>
+      <nav role="navigation">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
@@ -20,22 +21,30 @@
     </div>
   </header>
 
-  <main>
+  <main id="main-content" role="main">
     <div class="container">
       <section class="intro">
         <h1>Shahriar Mirnajafi</h1>
         <h2>Undergraduate Student @Amirkabir University of Technology, Tehran</h2>
-        <img src="shahriar_cropped.jpg" alt="Shahriar Mirnajafi" class="profile-image">
-        <p>Hi there! I’m an undergraduate student at Amirkabir University of Technology, Tehran, where I develop my skills in Computer Engineering. I am passionate about web technologies and software development and strive to design interactive, high-quality websites.</p>
-        <p>Throughout my studies, I have engaged in various projects that have allowed me to explore modern web development practices and innovative design patterns. I appreciate the challenge of solving complex problems and continuously learning new skills.</p>
-        <p>Before joining Amirkabir University, I was active in local tech communities and participated in several hackathons, which further enhanced my coding skills and creativity. I enjoy collaborating with others and believe teamwork is essential to bring innovative ideas to life.</p>
-        <p>On a personal note, I love to code, explore new technologies, and relish turning creative ideas into reality.</p>
+        <img src="shahriar_cropped.png" alt="Profile image of Shahriar Mirnajafi" class="profile-image">
+        <p>
+          Hi there! I’m an undergraduate student at Amirkabir University of Technology, Tehran, where I develop my skills in Computer Engineering. I am passionate about web technologies and software development and strive to design interactive, high-quality websites.
+        </p>
+        <p>
+          Throughout my studies, I have engaged in various projects that have allowed me to explore modern web development practices and innovative design patterns. I appreciate the challenge of solving complex problems and continuously learning new skills.
+        </p>
+        <p>
+          Before joining Amirkabir University, I was active in local tech communities and participated in several hackathons, which further enhanced my coding skills and creativity. I enjoy collaborating with others and believe teamwork is essential to bring innovative ideas to life.
+        </p>
+        <p>
+          On a personal note, I love to code, explore new technologies, and relish turning creative ideas into reality.
+        </p>
         <p>Welcome to my personal website.</p>
       </section>
     </div>
   </main>
 
-  <footer>
+  <footer role="contentinfo">
     <div class="container">
       <p>&copy; 2025 Shahriar Mirnajafi</p>
     </div>
