fix: correct image refrence

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section class="intro">
         <h1>Shahriar Mirnajafi</h1>
         <h2>Undergraduate Student @Amirkabir University of Technology, Tehran</h2>
-        <img src="shahriar_cropped.png" alt="Profile image of Shahriar Mirnajafi" class="profile-image">
+        <img src="shahriar_cropped.jpg" alt="Profile image of Shahriar Mirnajafi" class="profile-image">
         <p>
           Hi there! I’m an undergraduate student at Amirkabir University of Technology, Tehran, where I develop my skills in Computer Engineering. I am passionate about web technologies and software development and strive to design interactive, high-quality websites.
         </p>
